Evaluation and Summary chapter

--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -226,7 +226,7 @@ Both the views represent a kitchen area and its certain behavior. The symbolic v
 	\label{fig:Layout_Kitchen}
 \end{figure}
 
-For the symbolic view, I kept the \textit{Canvas} clean to represent an empty kitchen space where addition and manipulation of different objects such as sink, table, fridge etc. can be done. To make the kitchen space more realistic, I have even added {\color{blue} water outlet} on the western wall and {\color{red} electrical fittings} on the northen wall so that the user can relate to it. For layout view, I have filled the \textit{Canvas} with grids/blocks. The layout view represents exact kitchen space as shown in the symbolic view but, divided into blocks which restrict certain flexibility and functionality. Figure~\ref{fig:Layout_Kitchen} shows a sample of the symbolic view (Kitchen) and layout view (Layout).
+For the symbolic view, I kept the \textit{Canvas} clean to represent an empty kitchen space where addition and manipulation of different objects such as sink, table, fridge etc. can be done. To make the kitchen space more realistic, I have even added {\color{blue} water outlet} on the western wall and {\color{red} electrical fittings} on the northern wall so that the user can relate to it. For layout view, I have filled the \textit{Canvas} with grids/blocks. The layout view represents exact kitchen space as shown in the symbolic view but, divided into blocks which restrict certain flexibility and functionality. Figure~\ref{fig:Layout_Kitchen} shows a sample of the symbolic view (Kitchen) and layout view (Layout).
 
 Next step was to handle the user interactions in the process of performing various task on both the views. In web development, javascript is the most used language for handling the user interactions and programming the behavior of web pages \cite{javascript}. Hence, I have analyzed a few canvas libraries available in market e.g., Fabric.js \cite{fabricjs}, Processing.js \cite{processingjs}, Pixi.js \cite{pixijs}  by working on a few Proof of Concepts (PoC). The main idea was to check the feasibility and support for interactivity to perform different user defined tasks on the \textit{Canvas}. Finally, I chose Fabric.js as my javascript library for handling the user interactions because of below factors \cite{fabricjs}:
 \begin{itemize}
@@ -283,11 +283,11 @@ In my application, the servlet is strongly coupled with a controller helper i.e.
 Figure~\ref{fig:Sequence_Diagram-Controller(init)} and Figure~\ref{fig:Sequence_Diagram-Controller(delta)} illustrate the workflow of the controller in the form of sequence diagrams. The main task of the controller is to act as a communication bridge between view and model. In my case, this task is shared between servlet and controller helper.
 
 \begin{enumerate}
-	\item {\textbf{Load}: To load the application, the user enters the complete URL on a web browser. As soon as the web page is loaded, view generates an unique user id (GUID) for the current user and sends an initialization command for the bx tool i.e., eMoflon along with the GUID in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the controller creates a new instance of the controller helper class and store it inside a \texttt{map} pointing to the GUID sent in the request. Then, controller forwards the initialization request to the controller helper class and eMoflon tool gets instantiated. Afterward, controller requests for the newly generated models through the controller helper. Controller helper receives the tool specific models, convert it to the UI specific models and send it back to the controller. After receiving the response, controller forwards it to the view for visualization. The entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(init)}.}
+	\item {\textbf{Load}: To load the application, the user enters the complete URL on a web browser. As soon as the web page is loaded, view generates a unique user id (GUID) for the current user and sends an initialization command for the bx tool i.e., eMoflon along with the GUID in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the controller creates a new instance of the controller helper class and store it inside a \texttt{map} pointing to the GUID sent in the request. Then, the controller forwards the initialization request to the controller helper class and eMoflon tool gets instantiated. Afterward, controller requests for the newly generated models through the controller helper. Controller helper receives the tool specific models, convert it to the UI specific models and send it back to the controller. After receiving the response, the controller forwards it to the view for visualization. The entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(init)}.}
 		
-	\item {\textbf{Create Deltas}: After the synchronization button is pressed, view sends all the deltas created along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the controller extracts the GUID and checks its existence inside the \texttt{map}. If the GUID exits, controller picks the corresponding controller helper's instance and forward it all the deltas wrapped inside a \texttt{Change} class. If the GUID is not found, controller creates a new instance of the controller helper class and store it inside the \texttt{map} pointing to the guid. After receiving the \texttt{Change} object, controller helper converts it to the tool specific model data and forward it to the tool for processing. After processing is done, controller helper receives the tool specific models, convert it to the UI specific models and send it back to the controller. After receiving the response, the controller forwards it to the view for visualization. The entire process is shown in the upper part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Controller(delta)}.}
+	\item {\textbf{Create Deltas}: After the synchronization button is pressed, view sends all the deltas created along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the controller extracts the GUID and checks its existence inside the \texttt{map}. If the GUID exists, controller picks the corresponding controller helper's instance and forward it all the deltas wrapped inside a \texttt{Change} class. If the GUID is not found, the controller creates a new instance of the controller helper class and store it inside the \texttt{map} pointing to the GUID. After receiving the \texttt{Change} object, controller helper converts it to the tool specific model data and forward it to the tool for processing. After processing is done, controller helper receives the tool specific models, convert it to the UI specific models and send it back to the controller. After receiving the response, the controller forwards it to the view for visualization. The entire process is shown in the upper part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Controller(delta)}.}
 	
-	\item {\textbf{User Choice}: During processing of the data, if the tool requires a user input, user choices are sent to the controller helper. Controller helper converts it to the UI specific models and sends it back to the view through the controller. Controller receives the user's input along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. After receiving the request from the view, controller extracts the GUID and checks its existence inside the \texttt{map}. If the GUID exists, controller picks the corresponding controller helper's instance and forward it the user's input. Controller helper forwards it to the tool for further processing. After processing is done, controller helper receives the tool specific models, convert it to the UI specific models and send it back to the controller. After receiving the response, controller forwards it to the view for visualization. The entire process is shown in the lower part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Controller(delta)}.}
+	\item {\textbf{User Choice}: During processing of the data, if the tool requires a user input, user choices are sent to the controller helper. Controller helper converts it to the UI specific models and sends it back to the view through the controller. The controller receives the user's input along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. After receiving the request from the view, controller extracts the GUID and checks its existence inside the \texttt{map}. If the GUID exists, controller picks the corresponding controller helper's instance and forward it the user's input. Controller helper forwards it to the tool for further processing. After processing is done, controller helper receives the tool specific models, convert it to the UI specific models and send it back to the controller. After receiving the response, the controller forwards it to the view for visualization. The entire process is shown in the lower part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Controller(delta)}.}
 \end{enumerate}
 
 \begin{figure}
@@ -309,7 +309,7 @@ During the entire designing and implementation process as explained in previous 
 \paragraph{UI interaction and capturing deltas}
 From UI design and interaction point of view, after designing the views i.e., an empty canvas(Kitchen) to represent the symbolic view and a canvas filled with blocks(Layout) to represent the layout view, the first challenge was to conceptualizing the \texttt{delta}s and capturing them. 
 
-As mentioned earlier, symbolic view has more functionalities than layout view in example \textit{Arranging a Kitchen}. Firstly, I fixed the deltas that can be performed on either view. For example, three types of changes are allowed in kitchen i.e., creation of a new item, deletion of an item, and movement of an item. Whereas, two types of changes are allowed in layout i.e., creation of a new group and deletion of a group. Implementing the user interactions in the kitchen was relatively easy as the user have to deal with the creation, deletion, and movement of objects with actions such as mouse movements and button clicks. But, the real challenge was to handle the user interactions in the block structure of the layout. After having a few discussions, I and my supervisor decided to go ahead with colored blocks to show the occupancy of groups in the layout. Each group will be shown with a set of unique colored blocks. A user can generate different colors by multiple mouse clicks to fill an empty/non-occupied block while creating a new group and same colored blocks will be considered as one group. For deletion of a group, a user can click on any one of the same colored blocks (blocks belong to the same group) and blur its color. Figure~\ref{fig:Layout} shows a sample of the layout with a different set of groups filled with different colors.
+As mentioned earlier, the symbolic view has more functionalities than layout view in example \textit{Arranging a Kitchen}. Firstly, I fixed the deltas that can be performed on either view. For example, three types of changes are allowed in kitchen i.e., creation of a new item, deletion of an item, and movement of an item. Whereas, two types of changes are allowed in layout i.e., creation of a new group and deletion of a group. Implementing the user interactions in the kitchen was relatively easy as the user have to deal with the creation, deletion, and movement of objects with actions such as mouse movements and button clicks. But, the real challenge was to handle the user interactions in the block structure of the layout. After having a few discussions, I and my supervisor decided to go ahead with colored blocks to show the occupancy of groups in the layout. Each group will be shown with a set of unique colored blocks. A user can generate different colors by multiple mouse clicks to fill an empty/non-occupied block while creating a new group and same colored blocks will be considered as one group. For deletion of a group, a user can click on any one of the same colored blocks (blocks belong to the same group) and blur its color. Figure~\ref{fig:Layout} shows a sample of the layout with a different set of groups filled with different colors.
 
 \begin{figure}
 	\includegraphics[width=1\textwidth]{figures/layout}
@@ -347,7 +347,7 @@ To solve this problem, I decided to implement \textit{atomic delta} method. In t
 
 
 \subsection{Choices and Threats}\label{subsec:design_choicesthreats}
-During the design and implementation process of the final prototype, I had to make decisions out of the available choices. With every decision I took, there might be some threats associated with it and can effect the final result. For example, 
+During the design and implementation process of the final prototype, I had to make decisions out of the available choices. With every decision I took, there might be some threats associated with it and can affect the final result. For example, 
 \begin{itemize} 
 	\item {selection of the most suitable example to implement has impact on user's interactivity and ease of usage of the demonstrator.}
 	\item {selection of the bx tool has an impact on deciding the functionalities and usefulness of the demonstrator.}
