--- a/Final Documentation/Evaluation/Evaluation.tex
+++ b/Final Documentation/Evaluation/Evaluation.tex
@@ -79,23 +79,23 @@ As the context of the experiment is mainly focussed only on the computer science
 Formulating hypotheses formally state that what is going to be evaluated in the experiment. I have constructed my hypotheses focussing on the research questions \textbf{RQ 3.1}, \textbf{RQ 4.1}, and  \textbf{RQ 4.2} as described in Section \ref{subsec:goals}. Following are the hypotheses I have chosen to focus in my experiment:\\
 
 \begin{description}
-	\item[Operational Hypothesis]
+	\item[Operational Hypotheses]
 	\item[H$_{OP1}$:] Students derive their (in general wrong) intuition for and expectations of synchronization scenarios from the special case of bijections.
 	\item[H$_{OP2}$:] The use of demon-bx has a positive effect on the achievement of corresponding learning goals.\\
-	\item[H$_{OP2}$:] The use of demon-bx in combination with suitable scenarios has a positive effect on the achievement of corresponding learning goals.\\
+	\item[H$_{OP3}$:] Using demon-bx together with suitable scenarios is more effective than without scenarios.\\
 \end{description}
 
 To evaluate the above stated hypotheses, the corresponding null hypotheses are stated below:
 \begin{description}
-	\item[Null Hypothesis]
+	\item[Null Hypotheses]
 	\item[H$_{NU1}$:] Students do not derive their (in general wrong) intuition for the synchronization scenarios.
 	\item[H$_{NU2}$:] There is no significant improvement in the learning outcome of the students after using the demon-bx.
-	\item[H$_{NU3}$:] There is no significant improvement in the learning outcome of the treated group compared to the control group.
+	\item[H$_{NU3}$:] There is no significant improvement in the learning outcome of the students using demon-bx with suitable scenarios compared to the students using demon-bx without scenarios.
 
 \end{description}
 
 \subsubsection{Experimental Variables}\label{subsubsec:expvariables}
-Hypothesis described above helped in deciding the variables related to the experiment. Following paragraphs describe and Table~\ref{tab:Experimental_Variables} summarizes all of them .
+Hypothesis described above helped in deciding the variables related to the experiment. Following paragraphs describe and Table~\ref{tab:Experimental_Variables} summarizes all of them.
 
 \paragraph{Independent Variables} The independent variables, which the experimenter purposely changes during the experiment are listed below:
 
@@ -103,7 +103,7 @@ Does a group get scenarios to work through or not: nominal (yes or no)
 
 \paragraph{Controlled Variables} The controlled variables, which are kept the same throughout the experiment are listed below:
 
-Demonstrator platform: Demon-BX\\
+Demonstrator Platform: Demon-BX\\
 Concrete example: Arranging a Kitchen\\
 Group participants are chosen from: \{master students, PhD students, bx researchers, \ldots \}\\
 Test questions: 5\\
@@ -114,8 +114,8 @@ Max. time interval to answer questions: 55 min
 
 Correctness score of pretest: ordinal\\
 Correctness score of posttest: ordinal\\
-Level of certainty of pretest:  ordinal\\
-Level of certainty of posttest: ordinal
+Level of certainty of pretest:  interval\\
+Level of certainty of posttest: interval
 
 \begin{table}
 	\centering	
@@ -147,8 +147,8 @@ Level of certainty of posttest: ordinal
 		\newline Level of certainty of posttest & 
 		ordinal
 		\newline ordinal
-		\newline ordinal
-		\newline ordinal \\
+		\newline interval
+		\newline interval \\
 		\hline				
 		
 	\end{tabular}
@@ -196,7 +196,7 @@ After playing with the demonstrator, both groups were asked to take the post-tes
 \subsubsection{Data Validation}\label{subsubsec:datavalidation}
 Data was collected from 40 students. I stopped taking responses on Google forms i.e. pre-test and post-test forms from students exactly after 55 minutes. After the experiment, I checked the data entered by students in both the forms. Data from one student was removed, due to the fact that the data was regarded as invalid as the student could not finish both the test in the given time limit.
 
-Hence, after removing one student out of the 40, I had data from 39 students for statistical analysis and interpretation of the results.
+Hence, after removing one student out of the 40, I had data from 39 students for statistical analysis and interpretation of the results. Out of 39 students, 21 students were from the control group and remaining 18 were from treated group.
 
 Finally, based on unique identifiers (identifying the group and participant uniquely) derived for each participant, answers from pre-test and post-test were evaluated to get the results. 
 
@@ -223,96 +223,306 @@ This can be problematic as, for example, my test questions might not actually be
 \emph{Do the groups involved in the experiment equally balanced to have a positive effect on the outcome I measure?}
 
 \medskip
-\noindent It might be possible that students of equal caliber are sitting together or might have a discussion between the test to have a negetive effect on the results. Hence to avoid that, I have randomly selected students for control and treated group by giving them instruction sheets randomly while entering the class and making them sit in two separate groups apart from each other.
+\noindent It might be possible that students of equal caliber are sitting together or might have a discussion between the test to have a negative effect on the results. Hence to avoid that, I have randomly selected students for control and treated group by giving them instruction sheets randomly while entering the class and making them sit in two separate groups apart from each other.
 
 \subsubsection{Conclusion Validity}\label{subsubsec:conclusionvalidity}
-\emph{Does the treatment/change I introduced have a statistically significant effect on the outcome I measure? Can I draw conclusions based on the data?}
+\emph{Does the treatment/change I introduced have a statistically significant effect on the outcome I measure?}
 	
 \medskip
 \noindent A problem could be that participants just guess the answers wildly. So it might possible that the data could be faked or incorrect due to mistakes. To avoid faking of data and to add more authenticity to the experiment, I have added certainty values for each question so that I will get to know whether the participant is just guessing the answer or certain about it. Also, I have scrambled the order of the scenarios given to the treated group to play with and the questions asked so that participants will not get a clue about the relation between them.
 
+\emph{Does the formula I used for the result calculation produce statistically significant data? Can I draw conclusions based on the data?}
+
+\medskip
+\noindent It can be possible that the formula that I have used to calculate the result of the pretest or posttest taking the correctness and certainty into account or the improvement of the posttest compared to the pretest might not produce the exact significant data for further statistical analysis and can affect the final outcome. For example, now I am subtracting pretest result from posttest result and then dividing it by two for normalization to calculate the improvement. But, there might be other ways to define what improvement is relative to the pretest result.
+
 \subsection{Data Analysis, Results, and Discussion}\label{subsec:results}
-To get the results for my experiment, I have investigated on each hypothesis with the data collected separately. Analysis of the data, descriptive statistics are used to visualize the data collected and described in the following subsections.
+To get the results of my experiment, I have investigated on each hypothesis with the data collected separately. Analysis of the data and descriptive statistics are used to visualize the collected data. 
+
+In my experiment, I have asked five questions referring to five learning goals. Each question is prepared to test whether a student understood the related bx concept i.e., learning goal or not. As one of the goals of my thesis is to teach bx concepts through the demonstrator and all of my hypotheses are based on the measurement of correctness and improvement of the answers given by the students, I decided to track these variables question wise rather than evaluating the data collectively for all questions. Means, I calculated the result for each learning goal in order to find out whether the students understood each one of the concepts or not. 
+
+The formula for result calculation and analysis of each hypothesis is described in the following subsections.
+
+\subsubsection{Formula Used}\label{subsubsec:evaluation_formula}
+For statistical analysis of the data collected in two separate groups i.e., control and treated, formulas that I have used for the calculation of result for all hypotheses is described below:
+
+For ith Question \textit{Q$_{i}$} and group \textit{x} (where x $\in$ \{control(c), treated(t), none(combined)\}),
+
+\textit{CO$_{pre(xi)}$} $\in$ \{-1, 1\}, correctness of the answer to the ith pretest question for x group is either right (1) or wrong (-1).
+
+\textit{CE$_{pre(xi)}$} $\in$ [0, 1], certainty of the answer to the ith pretest question for x group is between 0 ("I just guessed") to 1 ("I am certain").
+
+\textit{CO$_{post(xi)}$} $\in$ \{-1, 1\}, correctness of the answer to the ith posttest question for x group is either 1 ("right") or -1  ("wrong").
+
+\textit{CE$_{post(xi)}$} $\in$ [0, 1], certainty of the answer to the ith posttest question for x group is between 0 ("I just guessed") to 1 ("I am certain").
+
+\textit{RES$_{pre(xi)}$} := \textit{CO$_{pre(xi)}$} $\times$ \textit{CE$_{pre(xi)}$} $\in$ [-1,  1], result for the ith pretest question for x group is between -1 ("absolutely wrong") to 1 ("absolutely right").
+
+\textit{RES$_{post(xi)}$} := \textit{CO$_{post(xi)}$} $\times$ \textit{CE$_{post(xi)}$} $\in$ [-1,  1], result for the ith posttest question for x group is between -1 ("absolutely wrong") to 1 ("absolutely right").
+
+\textit{IMP$_{(xi)}$} := (\textit{RES$_{post(xi)}$} - \textit{RES$_{pre(xi)}$})/2 $\in$ [-1,  1], improvement for the ith question for x group from pretest to posttest is between -1 ("absolute negative leaning") to 1 ("absolute positive leaning").
 
 \subsubsection{Analyzing Hypothesis 1}\label{subsubsec:hypothesis1}
-Hypothesis 1 i.e., \textbf{H$_{OP1}$} and \textbf{H$_{NU1}$} is designed to investigate research question \textbf{RQ 3.1}.
-\paragraph{Formula} Data for \textbf{RQ 3.1} can be collected from all pretest results i.e., combining the pretest results from both control and treated group. As five questions were asked, result can be calculated for each question from the pretest data. 
+Hypothesis 1 i.e., \textbf{H$_{OP1}$} and \textbf{H$_{NU1}$} is designed to investigate research question \textbf{RQ 3.1}. This hypothesis deals with the fact whether students derive their wrong intuition for the synchronization scenarios.
 
-Calculation of the result for each question involves the correctness and certainty of the answers given by the students.
-For ith Question \textit{Q$_{i}$},
+\begin{figure}
+	\centering
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Pretest_q1}
+		\caption{Result for Q1 (Pre-Test)}
+		\label{fig:Pretest_q1}
+	\end{minipage}%
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Pretest_q2}
+		\caption{Result for Q2 (Pre-Test)}
+		\label{fig:Pretest_q2}
+	\end{minipage}
+\end{figure}
 
-\textit{CO$_{pre(i)}$} $\epsilon$ \{-1, 1\}, correctness of the answer to the ith pretest question is either right (1) or wrong (-1).
+\begin{figure}
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Pretest_q3}
+		\caption{Result for Q3 (Pre-Test)}
+		\label{fig:Pretest_q3}
+	\end{minipage}%
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Pretest_q4}
+		\caption{Result for Q4 (Pre-Test)}
+		\label{fig:Pretest_q4}
+	\end{minipage}
+\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\textwidth]{figures/Pretest_q5}
+	\caption{Result for Q5 (Pre-Test)}
+	\label{fig:Pretest_q5}
+\end{figure}
 
-\textit{CE$_{pre(i)}$} $\epsilon$ [0, 1], certainty of the answer to the ith pretest question is between 0 ("I just guessed") to 1 ("I am certain").
+\paragraph{Formula} Data for \textbf{RQ 3.1} can be collected from all pretest results i.e., combining the pretest results from both control and treated group. As five questions were asked, the result can be calculated for each question from the pretest data. 
 
-\textit{RES$_{pre(i)}$} := \textit{CO$_{pre(i)}$} * \textit{CE$_{pre(i)}$} $\epsilon$ [-1,  1], result for the ith pretest question is between -1 to 1.
+Calculation of the result for each question involves both correctness and certainty of the answers given by the students. For ith Question \textit{Q$_{i}$},
 
-For the final calculation, following result will be considered:\\
-\textit{R$_{pre(i)}$}:= Set containing all the \textit{RES$_{pre(i)}$} calculated from the answers to the ith pretest question.
+\textit{RES$_{pre(i)}$} := \textit{CO$_{pre(i)}$} $\times$ \textit{CE$_{pre(i)}$} $\in$ [-1,  1], result for the ith pretest question is between -1 to 1.
 
-Null Hypothesis, {H$_{NU1}$}: Mean (\textit{R$_{pre(i)}$}) <= 0
-
-Operational Hypothesis, {H$_{OP1}$}: Mean (\textit{R$_{pre(i)}$}) > 0
+$\overrightarrow{\textit{RES}}$\textit{$_{pre(i)}$}:= Set containing all the \textit{RES$_{pre(i)}$} values, calculated from the answers to the ith pretest question.
 
 \paragraph{Data Analysis}
+After calculating the results i.e., \textit{RES$_{pre(i)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Pretest_q1}, \ref{fig:Pretest_q2}, \ref{fig:Pretest_q3}, \ref{fig:Pretest_q4}, and \ref{fig:Pretest_q5} show the density plots of the results for each question. In the plots, the x-axis represents the result calculated from combining both correctness and certainty as described in Section \ref{subsubsec:evaluation_formula} ranging between -1 (absolutely wrong) to 1 (absolutely right). Whereas, the y-axis represents the density of 39 students lying over the interval. From the Figure~\ref{fig:Pretest_q1}, it is possible to see that the distribution of the results is mainly on the positive side i.e., between 0 to 1 for Q1. But for other questions, the distribution of the results is rather scattered over the interval and does not give any conclusive result to accept or reject the null hypothesis just by looking at these plots.
+
+To gain an even better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to only one set of pre-test data, I have used the one-sample t-test.   
+
+As mentioned earlier, certainty value is also involved in the result calculation. It's value entered by the students ranges from 1 ("I just guessed") to 5 ("I am certain") which corresponds to the interval 0 to 1 considered for calculation. Hence the result of a correct answer with lowest certainty value to any question is 0.25. So this hypothesis can be expressed as:   
+
+Null Hypothesis, {H$_{NU1}$}: Mean ($\overrightarrow{\textit{RES}}$\textit{$_{pre(i)}$}) > 0.25 
+
+Hence, I have included the options (\textit{alternative="less", mu=0.25}) during the calculation which signifies that according to the operational hypothesis the mean value has to be less than 0.25. The results from the t-test are shown in Table~\ref{tab:t-test_PreTest}. The 95\% confidence interval has been included for this t-test and this confidence interval spans the x-axis of the density plots.
+
 \paragraph{Discussion}
+From the t-test results as shown in Table~\ref{tab:t-test_PreTest}, it can be clearly seen that the mean value of $\overrightarrow{\textit{RES}}$\textit{$_{pre(i)}$} for question Q1 is almost equivalent to 0.25 and for questions Q2, Q3, Q4, and Q5 is much less than 0.25. Also, the p-values are very low so the results are highly significant. However, the increase in the mean value for the question Q1 is most likely due to the fact that this is the easiest question among all and relatively more participants were able to answer it correctly.
+
+This result rejects the null hypothesis {H$_{NU1}$}. This shows that the students derive their (in general wrong) intuition for and expectations of synchronization scenarios.
+
+\begin{table}[ht]
+	\centering	
+	\begin{tabular}{|p{1cm}|p{1.5cm}|p{4cm}|p{1.5cm}|p{1.5cm}|p{1.5cm}|}
+		\hline
+		\rowcolor[gray]{.8}	
+		\textbf{} & \textbf{Students} & \textbf{Factor} & \textbf{t-value} & \textbf{p-value} & \textbf{mean}\\
+		\hline
+		Q1 & 39 & pre test result & 0.7293 & 0.7649 & 0.2948\\
+		\hline
+		Q2 & 39 & pre test result & -3.3139 & 0.0010 & -0.0448\\
+		\hline
+		Q3 & 39 & pre test result & -1.8514 & 0.0359 & 0.1089\\
+		\hline	
+		Q4 & 39 & pre test result & -2.3902 & 0.0109 & 0.0641\\
+		\hline
+		Q5 & 39 & pre test result & -5.0889 & 0.000005 & -0.1987\\
+		\hline			
+	\end{tabular}
+	\caption{t-test showing Result for Pre-Test (All Participants)}
+	\label{tab:t-test_PreTest}
+\end{table}
 
 \subsubsection{Analyzing Hypothesis 2}\label{subsubsec:hypothesis2}
-Hypothesis 2 i.e., \textbf{H$_{OP2}$} and \textbf{H$_{NU2}$} is designed to investigate research question \textbf{RQ 4.1}.
+Hypothesis 2 i.e., \textbf{H$_{OP2}$} and \textbf{H$_{NU2}$} is designed to investigate research question \textbf{RQ 4.1}. This hypothesis deals with the fact whether demon-bx has a positive effect on the achievement of corresponding learning goals.
 
 \paragraph{Formula}
-Data for \textbf{RQ 4.1} can be collected from all pretest and posttest results i.e., combining the pretest results from both control and treated group and combining the posttest results from both control and treated group. As five questions were asked, result can be calculated for each question from the pretest and posttest data. 
+Data for \textbf{RQ 4.1} can be collected from all pretest and posttest results i.e., combining the pretest results from both control and treated group and combining the posttest results from both control and treated group. As five questions were asked, the result can be calculated for each question from the pretest and posttest data. 
 
-Calculation of the result for each question involves calculation of improvement in correctness and certainty of the answers given by the students in posttest than pretest.
-For ith Question \textit{Q$_{i}$},
+Calculation of the result for each question involves calculation of improvement in correctness and certainty of the answers given by the students in posttest than pretest. For ith Question \textit{Q$_{i}$},
 
-\textit{CO$_{pre(i)}$} $\epsilon$ \{-1, 1\}, correctness of the answer to the ith pretest question is either right (1) or wrong (-1).
+\textit{IMP$_{(i)}$} := (\textit{RES$_{post(i)}$} - \textit{RES$_{pre(i)}$})/2 $\in$ [-1,  1], improvement for the ith question from pretest to posttest is between -1 to 1.
 
-\textit{CE$_{pre(i)}$} $\epsilon$ [0, 1], certainty of the answer to the ith pretest question is between 0 ("I just guessed") to 1 ("I am certain").
+$\overrightarrow{\textit{IMP}}$\textit{$_{(i)}$}:= Set containing all the \textit{IMP$_{(i)}$} calculated from the pretest and posttest answers.
 
-\textit{RES$_{pre(i)}$} := \textit{CO$_{pre(i)}$} * \textit{CE$_{pre(i)}$} $\epsilon$ [-1,  1], result for the ith pretest question is between -1 to 1.
+\begin{figure}
+	\centering
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Prepost_q1}
+		\caption{Improvement for Q1}
+		\label{fig:Prepost_q1}
+	\end{minipage}%
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Prepost_q2}
+		\caption{Improvement for Q2}
+		\label{fig:Prepost_q2}
+	\end{minipage}
+\end{figure}
 
-\textit{CO$_{post(i)}$} $\epsilon$ \{-1, 1\}, correctness of the answer to the ith posttest question is either right (1) or wrong (-1).
+\begin{figure}
+	\centering
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Prepost_q3}
+		\caption{Improvement for Q3}
+		\label{fig:Prepost_q3}
+	\end{minipage}%
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{figures/Prepost_q4}
+		\caption{Improvement for Q4)}
+		\label{fig:Prepost_q4}
+	\end{minipage}
+\end{figure}
 
-\textit{CE$_{post(i)}$} $\epsilon$ [0, 1], certainty of the answer to the ith posttest question is between 0 ("I just guessed") to 1 ("I am certain").
-
-\textit{RES$_{post(i)}$} := \textit{CO$_{post(i)}$} * \textit{CE$_{post(i)}$} $\epsilon$ [-1,  1], result for the ith posttest question is between -1 to 1.
-
-\textit{IMP$_{(i)}$} := (\textit{RES$_{post(i)}$} - \textit{RES$_{pre(i)}$})/2 $\epsilon$ [-1,  1], improvement for the ith question from pretest to posttest is between -1 to 1.
-
-For the final calculation, following result will be considered:\\
-\textit{I$_{(i)}$}:= Set containing all the \textit{IMP$_{(i)}$} calculated from the answers.
-
-Null Hypothesis, {H$_{NU1}$}: Mean (\textit{I$_{(i)}$}) <= 0
-
-Operational Hypothesis, {H$_{OP1}$}: Mean (\textit{I$_{(i)}$}) > 0
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\textwidth]{figures/Prepost_q5}
+	\caption{Improvement for Q5}
+	\label{fig:Prepost_q5}
+\end{figure}
 
 \paragraph{Data Analysis}
+After calculating the improvements i.e., \textit{IMP$_{(i)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Prepost_q1}, \ref{fig:Prepost_q2}, \ref{fig:Prepost_q3}, \ref{fig:Prepost_q4}, and \ref{fig:Prepost_q5} show the density plots of the improvements for each question. In the plots, the x-axis represents the improvement calculated as described in Section \ref{subsubsec:evaluation_formula} and ranges between -1 ("absolute negative learning") to 1 ("absolute positive learning"). Whereas, the y-axis represents the density of 39 students lying over the interval. 
+These density plots show that the improvement values are scattered over the entire interval quite uniformly on both sides of the value 0. But, it is very difficult to say whether the values are more on the positive side or more on the negative side. So it's very hard to accept or reject the null hypothesis just by looking at these plots.
+
+To gain an even better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to only one set of improvement data, I have used the one-sample t-test.   
+
+In the experiment, posttest was conducted following the pretest. Hence, improvement is always calculated for posttest compared to the pretest by subtracting pretest (\textit{RES$_{pre(i)}$}) results from posttest (\textit{RES$_{post(i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Hence the value less than 0 signifies "negative" improvement and the value greater than 0 signifies "positive" improvement. So this hypothesis can be expressed as:   
+
+Null Hypothesis, {H$_{NU2}$}: Mean ($\overrightarrow{\textit{IMP}}$\textit{$_{(i)}$}) < 0
+
+Hence, I have included the option (\textit{alternative="greater"}) during the calculation which signifies that according to the operational hypothesis the mean value has to be greater than the default value 0. The results from the t-test are shown in Table~\ref{tab:t-test_PrePostTest}. The 95\% confidence interval has been included for this t-test and this confidence interval spans the x-axis of the density plots.
+
 \paragraph{Discussion}
+From the t-test results as shown in Table~\ref{tab:t-test_PrePostTest}, it can be seen that the mean value of $\overrightarrow{\textit{IMP}}$\textit{$_{(i)}$} for question Q4 is almost equivalent to 0 and for questions Q1, Q2, Q3, and Q5 is less than 0. But, the p-values are on higher side.
+
+Hence, the results of the analysis are not significant. Although some positive effect can be seen for the posttest results compared to the pretest results in terms of mean value, it is not evident to show that there is a significant difference to reject the null hypothesis {H$_{NU2}$}. This shows that for the fact whether demon-bx has a positive effect on the achievement of corresponding learning goals, no conclusive or significant results were obtained.
+
+\begin{table}[ht]
+	\centering	
+	\begin{tabular}{|p{1cm}|p{1.5cm}|p{4.5cm}|p{1.5cm}|p{1.5cm}|p{1.5cm}|}
+		\hline
+		\rowcolor[gray]{.8}	
+		\textbf{} & \textbf{Students} & \textbf{Factor} & \textbf{t-value} & \textbf{p-value} & \textbf{mean}\\
+		\hline
+		Q1 & 39 & improvement (pre to post) &  -2.3269 & 0.9873 & -0.1602\\
+		\hline
+		Q2 & 39 & improvement (pre to post) & -0.8623 & 0.803 & -0.0512\\
+		\hline
+		Q3 & 39 & improvement (pre to post) & -0.8572 & 0.8017 & -0.0512\\
+		\hline	
+		Q4 & 39 & improvement (pre to post) & 0.5337 & 0.2983 & 0.0352\\
+		\hline
+		Q5 & 39 & improvement (pre to post) & -1.0283 & 0.8448 & -0.0737\\
+		\hline			
+	\end{tabular}
+	\caption{t-test result for improvement (All Participants)}
+	\label{tab:t-test_PrePostTest}
+\end{table}
+
 \subsubsection{Analyzing Hypothesis 3}\label{subsubsec:hypothesis3}
-Hypothesis 3 i.e., \textbf{H$_{OP3}$} and \textbf{H$_{NU3}$} is designed to investigate research question \textbf{RQ 4.2}.
+Hypothesis 3 i.e., \textbf{H$_{OP3}$} and \textbf{H$_{NU3}$} is designed to investigate research question \textbf{RQ 4.2}. This hypothesis deals with the fact whether using demon-bx together with suitable scenarios is more effective than without scenarios.
 
 \paragraph{Formula}
-Data for \textbf{RQ 4.2} can be collected from all pretest and posttest results separately from control and treated group. As five questions were asked, result can be calculated for each question from the pretest and posttest data separately for control and treated group. 
+Data for \textbf{RQ 4.2} can be collected from all pretest and posttest results separately from control and treated group. As five questions were asked, the result can be calculated for each question from the pretest and posttest data separately for control and treated group. 
 
-Calculation of the result for each question involves calculation of improvement in correctness and certainty of the answers given by the students in posttest than pretest separately for control and treated group.
-For ith Question \textit{Q$_{i}$},
+Calculation of the result for each question involves calculation of improvement in correctness and certainty of the answers given by the students in posttest than pretest separately for control and treated group. For ith Question \textit{Q$_{i}$},
 
-Parameters used in the below formulas e.g., \textit{RES$_{post(ci)}$}, \textit{RES$_{pre(ci)}$}, \textit{RES$_{post(ti)}$}, \textit{RES$_{pre(ti)}$} are calculated similar to the formulas as described in Section \ref{subsubsec:hypothesis2} but separately for control and treated group.
+\textit{IMP$_{(ci)}$} := (\textit{RES$_{post(ci)}$} - \textit{RES$_{pre(ci)}$})/2 $\in$ [-1,  1], improvement for the ith question for the control group from pretest to posttest is between -1 to 1.
 
-\textit{IMP$_{(ci)}$} := (\textit{RES$_{post(ci)}$} - \textit{RES$_{pre(ci)}$})/2 $\epsilon$ [-1,  1], improvement for the control group for the ith question from pretest to posttest is between -1 to 1.
+\textit{IMP$_{(ti)}$} := (\textit{RES$_{post(ti)}$} - \textit{RES$_{pre(ti)}$})/2 $\in$ [-1,  1], improvement for the ith question for the treated group from pretest to posttest is between -1 to 1.
 
-\textit{IMP$_{(ti)}$} := (\textit{RES$_{post(ti)}$} - \textit{RES$_{pre(ti)}$})/2 $\epsilon$ [-1,  1], improvement for the treated group for the ith question from pretest to posttest is between -1 to 1.
+$\overrightarrow{\textit{IMP}}$\textit{$_{(ci)}$}:= Set containing all the \textit{IMP$_{(ci)}$} calculated from the answers of the control group.
 
-For the final calculation, following result will be considered:\\
-\textit{I$_{(ci)}$}:= Set containing all the \textit{IMP$_{(ci)}$} calculated from the answers of the control group.
+$\overrightarrow{\textit{IMP}}$\textit{$_{(ti)}$}:= Set containing all the \textit{IMP$_{(ti)}$} calculated from the answers of the treated group.
 
-\textit{I$_{(ti)}$}:= Set containing all the \textit{IMP$_{(ti)}$} calculated from the answers of the treated group.
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{figures/Control-Treated_q1}
+	\caption{Comparison of improvement for Q1 (Control to Treated Group)}
+	\label{fig:Control-Treated_q1}
+\end{figure}
 
-Null Hypothesis, {H$_{NU1}$}: Mean (\textit{I$_{(ci)}$})  - Mean (\textit{I$_{(ti)}$}) < 0
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{figures/Control-Treated_q2}
+	\caption{Comparison of improvement for Q2 (Control to Treated Group)}
+	\label{fig:Control-Treated_q2}
+\end{figure}
 
-Operational Hypothesis, {H$_{OP1}$}: Mean (\textit{I$_{(ci)}$})  - Mean (\textit{I$_{(ti)}$}) > 0
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{figures/Control-Treated_q3}
+	\caption{Comparison of improvement for Q3 (Control to Treated Group)}
+	\label{fig:Control-Treated_q3}
+\end{figure}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{figures/Control-Treated_q4}
+	\caption{Comparison of improvement for Q4 (Control to Treated Group)}
+	\label{fig:Control-Treated_q4}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{figures/Control-Treated_q5}
+	\caption{Comparison of improvement for Q5 (Control to Treated Group)}
+	\label{fig:Control-Treated_q5}
+\end{figure}
 
 \paragraph{Data Analysis}
+After calculating the improvements for control and treated group separately i.e., \textit{IMP$_{(ci)}$} and \textit{IMP$_{(ti)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Control-Treated_q1}, \ref{fig:Control-Treated_q2}, \ref{fig:Control-Treated_q3}, \ref{fig:Control-Treated_q4}, and \ref{fig:Control-Treated_q5} show the question wise density plots of the improvements for control and treated group. In the plots, the x-axis represents the improvement as described in Section \ref{subsubsec:evaluation_formula} and ranges between -1 ("absolute negative learning") to 1 ("absolute positive learning"). Whereas, the y-axis represents the density of 21 students in case of the control group and 18 students in case of the treated group lying over the interval. These figures show a comparison between the scattering of the improvement values for control and treated group. From these figures, both uniform and non-uniform distribution of the values can be seen on both sides of the value 0. But, for any naked eye, it is impossible to say whether the improvement in the case of treated group is more or the improvement in the case of the control group is more. So it's very hard to accept or reject the null hypothesis just by comparing these plots.
+
+To gain an even better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to two sets of improvement data i.e., control and treated group, I have used the unpaired two-sample t-test.   
+
+As mentioned earlier, improvement is always calculated for posttest compared to the pretest. Here also improvement for control group is calculated subtracting control group pretest (\textit{RES$_{pre(ci)}$}) results from control group posttest (\textit{RES$_{post(ci)}$}) results and then dividing it by two for normalizing it between -1 to 1. Similarly, improvement for treated group is calculated subtracting treated group pretest (\textit{RES$_{pre(ti)}$}) results from treated group posttest (\textit{RES$_{post(ti)}$}) results and then dividing it by two for normalizing it between -1 to 1. Hence the value less than 0 signifies "negative" improvement and the value greater than 0 signifies "positive" improvement. As two independent groups are involved, this hypothesis can be expressed as:   
+
+Null Hypothesis, {H$_{NU1}$}: Mean ($\overrightarrow{\textit{IMP}}$\textit{$_{(ci)}$})  - Mean ($\overrightarrow{\textit{IMP}}$\textit{$_{(ti)}$}) < 0
+
+Hence, I have included the option (\textit{alternative="less", var.equal=TRUE}) during the calculation which signifies that according to the operational hypothesis, the mean value of the control group's improvement has to be less than the treated group's improvement assuming that both groups have equal standard deviation. Here I have assumed both groups to be equal as all the students were Master students from computer science branch with no or very less prior experience in synchronisation, bidirectional transformation. The results from the t-test are shown in Table~\ref{tab:t-test_controltreated}. The 95\% confidence interval has been included for this t-test and this confidence interval spans the x-axis of the density plots.
+
 \paragraph{Discussion}
+From the t-test results as shown in Table~\ref{tab:t-test_controltreated}, it can be seen that the mean difference of $\overrightarrow{\textit{IMP}}$\textit{$_{(ci)}$} from $\overrightarrow{\textit{IMP}}$\textit{$_{(ti)}$} for question Q2 is greater than 0 but for questions Q1, Q3, Q4, and Q5 is less than 0. But, the p-values are on higher side.
+
+Hence, the results of the analysis are not significant. Although some positive effect can be seen for the treated group compared to the control group in terms of mean value, it is not evident to show that there is a significant difference to reject the null hypothesis {H$_{NU3}$}. This shows that for the fact whether using demon-bx together with suitable scenarios is more effective than without scenarios, no conclusive or significant results were obtained.
+
+\begin{table}[ht]
+	\centering	
+	\begin{tabular}{|p{1cm}|p{1.5cm}|p{4.5cm}|p{1.5cm}|p{1.5cm}|p{1.5cm}|}
+		\hline
+		\rowcolor[gray]{.8}	
+		\textbf{} & \textbf{Students} & \textbf{Factor} & \textbf{t-value} & \textbf{p-value} & \textbf{mean diff.}\\
+		\hline
+		Q1 & 39 & Control vs. Treated & -0.8672 & 0.1957 & -0.1279\\
+		\hline
+		Q2 & 39 & Control vs. Treated & 1.6131 & 0.9424 & 0.1884\\
+		\hline
+		Q3 & 39 & Control vs. Treated & -0.6813 & 0.25 & -0.0823\\
+		\hline	
+		Q4 & 39 & Control vs. Treated & -0.1847 & 0.4272 & -0.0248\\
+		\hline
+		Q5 & 39 & Control vs. Treated & -0.143 & -0.0833 & -0.0208\\
+		\hline			
+	\end{tabular}
+	\caption{t-test (unpaired) result for improvement (Control vs. Treated Group)}
+	\label{tab:t-test_controltreated}
+\end{table}
