--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -22,13 +22,13 @@ The bx community (\url{http://bx-community.wikidot.com/}) has been doing researc
 
 Although a significant amount of work has been done on bx, a general awareness and understanding for basic concepts, the involved challenges, and reasonable expectations are not really given. Hence, there exist conceptual and practical challenges with building software systems using bx-tools and as a result, bx tools and their applicability is still not widely known and used~\cite{bx-theoryandappl}.
 
-From experience with working with master students (future software developers) and bx researchers, we have identified that imparting knowledge about certain core bx concepts can improve the situation. However, the problem is that it is relatively hard and challenging to do this as current possibilities (virtual machines, handbooks, etc) are either tool specific or ineffective because installation process to get the tool running is a time-consuming process and sometimes requires technical expertise in a specific area/tool/programming language. Even after you get the tool running, it doesn't necessarily help in understanding bx concepts because of lack of proper explanations. Just examples are not interactive enough, anything tool-specific gets into too much detail of the respective tool, etc.  So a platform on which one can easily prepare high-quality, easily understandable, and engaging learning material for spreading the bx concepts is missing.
+From experience with working with master students (future software developers) and bx researchers, we have identified that imparting knowledge about certain core bx concepts can improve the situation. However, the problem is that it is relatively hard and challenging to do this as current possibilities (virtual machines, handbooks, etc) are either tool specific or ineffective because installation process to get the tool running is a time-consuming process and sometimes requires technical expertise in a specific area/tool/programming language. Even after you get the tool running, it doesn't necessarily help in understanding bx concepts because of lack of proper explanations. Just examples are not interactive enough, anything tool-specific gets into too much detail of the respective tool, etc. So a platform on which one can easily prepare high-quality, easily understandable, and engaging learning material for spreading the bx concepts is missing.
 
 To keep a focus on the above described problem statements and to relate to the work done directly or indirectly during my entire thesis, I have formulated the following associated research questions (referred to as \textbf{RQ} from now on):
 
 \begin{description}
 	\item [RQ 1:] What are the core requirements for implementing a successful bx demonstrator?
-	\item [RQ 2:] Which goals can be particularly well addressed in a bx demonstrator and why?
+	\item [RQ 2:] To what extent is such a bx demonstrator reusable?
 	\item [RQ 3:] Is it possible to teach the concepts of bx through a demonstrator?
 	\item [RQ 4:] Does an interactive GUI helps a user to increase his/her understanding related to bx concepts?
 \end{description}
@@ -42,6 +42,13 @@ To solve the problems as described in Section \ref{subsec:probstmt}, in this the
 
 An existing bx tool will be used as a part of the demonstrator to realize \textit{bidirectional transformation}. The final prototype will be interactive and easily accessible to users to help them understand the potential, power, and limitations of bx.
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\textwidth]{figures/Contribution}
+	\caption{Contributions}
+	\label{fig:Contribution}
+\end{figure}
+
 Besides giving an overview of previous work and comparing their advantages and disadvantages with my demonstrator, Figure~\ref{fig:Contribution} shows my contributions towards providing a solution to the problems described in Section \ref{subsec:probstmt}. It can be categorized into three parts: 
 
 \begin{enumerate} 
@@ -50,17 +57,11 @@ Besides giving an overview of previous work and comparing their advantages and d
 	\item {Evaluation of the demonstrator}
 \end{enumerate}
 
-\begin{figure}
-	\includegraphics[width=1\textwidth]{figures/Contribution}
-	\caption{Contributions}
-	\label{fig:Contribution}
-\end{figure}
+After analyzing the existing work on bx and their related problems (detail explanation described in Section \ref{sec:relatedwork}), to solve the problems in hand, designing an application framework for the implementation of an interactive demonstrator is needed. I have designed a working, fully functional application framework based on MVC pattern for implementing a bx tool demonstrator along with an interactive user interface for the accomplishment of point (1). This framework can be used to implement a demonstrator encapsulating bx tools with concrete examples.
 
-After analyzing the existing work on bx and their related problems (detail explanation described in Section \ref{sec:relatedwork}), to solve the problems in hand, designing an application framework for the implementation of an interactive demonstrator is needed. I have designed a working, fully functional application framework based on MVC pattern for implementing a bx tool demonstrator along with an interactive user interface for the accomplishment of point (1). This framework can be used to implement a demonstrator encapsulating a bx tool with a concrete example.
+Along with this achievement, a concrete implementation of a demonstrator can be done to check the feasibility and validity of the application framework. I have implemented a fully functional online demonstrator based on the application framework designed earlier for the accomplishment of point (2). This demonstrator is based on a bx tool i.e., eMoflon and a concrete example leveraging the functionalities of the bx tool and explaining some basic bx concepts. 
 
-Along with this achievement, a concrete implementation of a demonstrator can be done to check the validity of the application framework. I have implemented a fully functional online demonstrator based on the application framework designed earlier for the accomplishment of point (2). This demonstrator is based on a bx tool i.e., eMoflon and a concrete example leveraging the functionalities of the bx tool and explaining some basic bx concepts. 
-
-After the implementation, evaluation of the demonstrator to check the effectiveness and its impact on the mass audience is needed. I have evaluated the demonstrator based on the research method called controlled experiments \cite{semethods} for the accomplishment of point (3). This experiment is based on one or more hypothesis, which guides all steps of the experimental design, deciding which variables i.e., dependent and independent variables to include and how to measure them. A well-designed experiment is performed with different groups of participants, data is collected and analyzed to measure the outcome.
+After the implementation, evaluation of the demonstrator to check the effectiveness and its impact on the mass audience is needed. I have evaluated the demonstrator based on the research method called controlled experiments \cite{semethods} for the accomplishment of point (3). This experiment is based on three hypotheses, which guides all steps of the experimental design, deciding which variables i.e., dependent, independent, and controlled to include and how to measure them. A well-designed experiment is performed with two different groups of participants, data is collected and analyzed to measure the outcome.
 
 All of my contributions help to achieve the goal of this thesis i.e., a demonstrator for spreading the knowledge about bx concepts.
 
@@ -77,13 +78,15 @@ In this thesis, bidirectional transformation will be discussed by referring to a
 \subsection{Running Example}\label{subsec:runningexample}
 This example is a simplified kitchen planner. Figure~\ref{fig:Running_Example_GUI} describes the relation between the \textit{Kitchen Model} denoted by \textit{Kitchen} (right-hand side canvas) and the \textit{Grid Model} denoted by \textit{Layout} (left-hand side canvas). 
 
-\begin{figure}
+\begin{figure}[h]
+	\centering
 	\includegraphics[width=1\textwidth]{figures/KitchenToGrid}
 	\caption{Running Example: Layout and Kitchen}
 	\label{fig:Running_Example_GUI}
 \end{figure} 
 
-\begin{figure}
+\begin{figure}[h]
+	\centering
 	\includegraphics[width=1\textwidth]{figures/KitchenToGrid_consistency}
 	\caption{Running Example: Consistency Preservation}
 	\label{fig:Running_Example_GUI_consistency}
@@ -134,23 +137,26 @@ A metamodel describes a set of models, i.e., defines a modeling language.
 
 \textit{Example:} In my demonstrator, the example that I have two meta-models i.e., \textit{Kitchen} and \textit{Grid}. Both the models represent the reality "Kitchen". A relation between reality and models is shown in Table~\ref{tab:Model_Reality}. 
 
-\begin{figure}
+Figure~\ref{fig:Grid_MetaModel} and Figure~\ref{fig:Kitchen_MetaModel} depict the \textit{Grid} and \textit{Kitchen} meta-model respectively as a class diagram from an object oriented point of view showing the related classes and the relationship between them.
+
+\begin{figure}[h]
+	\centering
 	\includegraphics[width=0.7\textwidth]{figures/Grid_MetaModel}
 	\caption{Grid MetaModel}
 	\label{fig:Grid_MetaModel}
 \end{figure}
 
 \begin{figure}
+	\centering
 	\includegraphics[width=0.7\textwidth]{figures/Kitchen_MetaModel}
 	\caption{Kitchen Meta-Model}
 	\label{fig:Kitchen_MetaModel}
 \end{figure}
 
-Figure~\ref{fig:Grid_MetaModel} and Figure~\ref{fig:Kitchen_MetaModel} depict the \textit{Grid} and \textit{Kitchen} meta-model respectively as a class diagram from an object oriented point of view showing the related classes and the relationship between them.
-
 Figure~\ref{fig:Kitchen_AbstractConcrete} illustrates an abstract and concrete view of the \textit{Kitchen} model. The left-side figure shows an abstract syntax i.e., an instance of the kitchen. Whereas, right-side figure describes a concrete syntax of the kitchen as visualized in the user interface.\\
 
 \begin{figure}
+	\centering
 	\includegraphics[width=1\textwidth]{figures/Kitchen_AbstractConcrete}
 	\caption{Kitchen Model (Abstract \& Concrete)}
 	\label{fig:Kitchen_AbstractConcrete}
@@ -183,6 +189,7 @@ A delta is a change applied to one or more properties of an artefact. It denotes
 \end{table}
 
 \begin{figure}
+	\centering
 	\includegraphics[width=1\textwidth]{figures/Delta_Propagation}
 	\caption{Delta Propagation}
 	\label{fig:Delta_Propagation}
@@ -201,12 +208,14 @@ Relationships between models from different model spaces are called corresponden
 \textit{Example:} In my demonstrator example, an example of a corr c(Grid2; Kitchen2) is shown in Figure~\ref{fig:Model_Space}. A concrete example of the corr is given in  Figure~\ref{fig:Correspondence_Links}.
 
 \begin{figure}
+	\centering
 	\includegraphics[width=1\textwidth]{figures/Model_Space}
 	\caption{Model Space}
 	\label{fig:Model_Space}
 \end{figure}
 
 \begin{figure}
+	\centering
 	\includegraphics[width=1\textwidth]{figures/Corr}
 	\caption{Correspondence Links}
 	\label{fig:Correspondence_Links}
@@ -219,6 +228,13 @@ Changes in one model may or may not cause any change in another correspondence m
 \textit{Example:} In my demonstrator example, a \textit{Kitchen} model is consistent with a \textit{Grid} model when a mapping between \textit{itemSocket} and \textit{group} can be established such that itemSocket containing an item is paired with a group containing block(s). 
 Figure~\ref{fig:Running_Example_GUI} and Figure~\ref{fig:Running_Example_GUI_consistency} describe a concrete example of consistency preservation where, changes in \textit{Kitchen} (Kitchen model) i.e., movement of the sink should ensure the movement of the corresponding group with two horizontal blocks in \textit{Layout} (Grid model) in order to ensure consistency.
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\textwidth]{figures/BX}
+	\caption{Bidirectional Transformation}
+	\label{fig:BX_Diagram}
+\end{figure}
+
 \begin{defn}\label{deffwdbkdtrans} (Forward and Backward Transformation)\\
 Model transformation is defined as a process for propagating the changes (deltas) from one model of one domain to a corresponding model in another domain using forward and/or backward transformation operations. After a transformation operation, consistency of source and target model is always ensured as model transformation ensures that for each consistent source model there exist a consistent target model~\cite{modelsynchro-tgg}.
 
@@ -229,16 +245,11 @@ In backward transformation, only the changes that occur in the target model is p
 Given two models, the bidirectional transformation is a pair of transformation which takes place in both forward and backward direction maintaining the consistency relation between them~\cite{understanding-bx}.
 \end{defn}
 
-\begin{figure}
-	\includegraphics[width=1\textwidth]{figures/BX}
-	\caption{Bidirectional Transformation}
-	\label{fig:BX_Diagram}
-\end{figure}
-
 \textit{Example:} In my demonstrator example, "Grid" is the \textit{Source} model and "Kitchen" is the \textit{Target} model. Forward transformation will cause "Grid Model" to transform into "Kitchen Model" and Backward transformation will cause "Kitchen Model" to transform into "Grid Model".
 Figure~\ref{fig:BX_Diagram} shows an abstract example of the "BX" describing both forward and backward transformation. Whereas, Figure~\ref{fig:Transformation_Concrete} depicts a concrete example of the "BX" process where \textit{Layout} and \textit{Kitchen} are described as source and target respectively in the process of forward and backward transformation.
 
 \begin{figure}
+	\centering
 	\includegraphics[width=1\textwidth]{figures/Transformation_Concrete}
 	\caption{Transformation (Concrete Diagram)}
 	\label{fig:Transformation_Concrete}
